[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/download_scene.gd" type="Script" id=1]
[ext_resource path="res://fonts/HULifeStyle_m.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://image_textures/bg_solid_color.png" type="Texture" id=3]
[ext_resource path="res://image_textures/x.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 2 )

[node name="download_scene" type="Node2D"]
script = ExtResource( 1 )

[node name="background_image" type="TextureRect" parent="."]
margin_left = -24.0
margin_top = -14.0
margin_right = 1049.0
margin_bottom = 647.0
texture = ExtResource( 3 )
expand = true

[node name="library_header" type="Label" parent="background_image"]
margin_left = 288.0
margin_top = 64.0
margin_right = 751.0
margin_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "File Download"
align = 1
valign = 1

[node name="quit_button" type="Button" parent="."]
margin_left = 959.0
margin_top = 3.0
margin_right = 1022.0
margin_bottom = 60.0
icon = ExtResource( 4 )
flat = true
expand_icon = true

[node name="select_button" type="Button" parent="."]
margin_left = 265.0
margin_top = 208.0
margin_right = 738.0
margin_bottom = 391.0
text = "Select"

[node name="download_file" type="FileDialog" parent="."]
margin_left = 69.0
margin_top = 153.0
margin_right = 957.0
margin_bottom = 576.0
window_title = "Open a File"
mode = 0
access = 2
current_dir = "/Users"
current_file = "Users"
current_path = "/Users/Users"

[connection signal="pressed" from="quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="select_button" to="." method="_on_select_button_pressed"]
[connection signal="file_selected" from="download_file" to="." method="_on_download_file_file_selected"]
